# hexapod

phantomx_description/: CMakeLists.txt  package.xml
phantomx_description/launch/: viz.launch.py
phantomx_description/urdf/: phantomx.ignition.xacro  phantomx.xacro  phantomx_urdf.xacro
phantomx_ignition/: CMakeLists.txt  package.xml
phantomx_ignition/launch/: ign.launch.py
phantomx_ignition/worlds/: phntwrld.sdf
phantomx_sim/: CMakeLists.txt  package.xml
phantomx_sim/launch/: phantomx_sim.launch.py
