<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
  
<package format="3">

  <name>phantomx_description</name>
  
  <version>0.1.0</version>
  
  <description>Describes Phantom X robot model for Ignition Gazebo</description>

  <maintainer email="praneeth.pep@gmail.com">Kvk Praneeth</maintainer>

  <license>BSD</license>

  <author email="pc@humarobotics.com">Philippe Capdepuy</author>
  <author email="praneeth.pep@gmail.com">Kvk Praneeth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
